infrastructure/files/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
  labels:
    app: backend
  name: backend-ingress
  namespace: api
spec:
  rules:
  - host: DOMAIN_NAME
    http:
      paths:
      - backend:
          serviceName: backend
          servicePort: 8080
        path: /v1/
  tls:
  - hosts:
    - DOMAIN_NAME
    secretName: DOMAIN_NAME
